--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <link rel="stylesheet" type="text/css" href="solar.css">
+		<link rel="stylesheet" type="text/css" href="solar.css">
+		<link rel="stylesheet" href="animate.css">
 	</head>
 	<body>
 	  <ol>
